<resources>
    <string name="app_name">Automate Test Demo</string>
    <string name="check_it">Check it</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed.</string>
    <string name="username_error">Enter username</string>
    <string name="password_error">Enter password</string>
    <string name="success_message">You\'ve Successfully Logged In!!</string>
</resources>
